# ros2_mediapipe

./: .gitmodules  CMakeLists.txt  package.xml
bash/: camera_suppoted_resolution.sh
scripts/: handCpu.py  handViz.py
