<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_mediapipe</name>
  <version>0.0.1</version>
  <description>ROS2 implementation of Google mediapipe</description>
  <maintainer email="teerameth.sk@gmail.com">teera</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
<!--  <exec_depend>control_msgs</exec_depend>-->
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2launch</exec_depend>
<!--  <exec_depend>teleop_twist_keyboard</exec_depend>-->
<!--  <exec_depend>teleop_twist_joy</exec_depend>-->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
<!--  <exec_depend>ros2_control</exec_depend>-->
<!--  <exec_depend>ros2_controllers</exec_depend>-->
  <exec_depend>lifecycle_msgs</exec_depend>


  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
